--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-1. ogólne dane
+1. Ogólne
 2. Navigacja
 3. Slider
 4. o mnie
@@ -8,7 +8,9 @@
 7.galeria
 8. Kontakt 
 9. Stopka
-*/
+-------------------------------------------------------------------------*/
+
+/* 1. Ogólne */
 
 * {
   box-sizing: border-box;
@@ -19,4 +21,37 @@ body {
   font-size: 20px;
 }
 
-/* Nawigacja  */
+/* 2. Nawigacja  */
+
+nav {
+  border-bottom: 3px solid #c2000b;
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+}
+
+ul {
+  display: flex;
+}
+
+li {
+  flex-basis: 100%;
+}
+
+a {
+  display: block;
+  font-size: 25px;
+  text-align: center;
+  text-decoration: none;
+  width: 140px;
+  line-height: 70px;
+  color: black;
+  font-family: 'Dancing Script', cursive;
+}
+
+nav li a:hover {
+  background-color: #c2000b;
+  color: #fff;
+}
+
+/* Slider */
