--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ a {
   text-align: center;
   text-decoration: none;
   width: 140px;
+  font-weight: bold;
   line-height: 70px;
   color: black;
   font-family: 'Dancing Script', cursive;
@@ -55,3 +56,79 @@ nav li a:hover {
 }
 
 /* Slider */
+
+#carousel {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 80vh;
+}
+
+.slider li {
+  list-style: none;
+}
+
+.slider img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /*min-width: 100%;
+  min-height: 100%; */
+  object-fit: cover;
+  width: 100%;
+  opacity: 0;
+  animation: slider 90s infinite linear;
+}
+
+.slider li:nth-child(2) img {
+  animation-delay: 10s;
+}
+
+.slider li:nth-child(3) img {
+  animation-delay: 20s
+}
+
+.slider li:nth-child(4) img {
+  animation-delay: 30s
+}
+
+.slider li:nth-child(5) img {
+  animation-delay: 40s
+}
+
+.slider li:nth-child(6) img {
+  animation-delay: 50s
+}
+
+.slider li:nth-child(7) img {
+  animation-delay: 60s
+}
+
+.slider li:nth-child(8) img {
+  animation-delay: 70s
+}
+
+@keyframes slider {
+  0% {
+    opacity: 0;
+  }
+
+  1% {
+    opacity: 1;
+  }
+
+  11% {
+    opacity: 1;
+  }
+
+  12% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+/* O mnie */
