--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ nav li a:hover {
   position: relative;
   width: 100%;
   height: 80vh;
+  /* border-bottom: 3px solid #c2000b; */
 }
 
 .slider li {
@@ -78,7 +79,7 @@ nav li a:hover {
   object-fit: cover;
   width: 100%;
   opacity: 0;
-  animation: slider 90s infinite linear;
+  animation: slider 80s infinite linear;
 }
 
 .slider li:nth-child(2) img {
@@ -132,3 +133,63 @@ nav li a:hover {
 }
 
 /* O mnie */
+
+.aboutMe {
+  width: 80%;
+  margin: 25px auto;
+}
+
+.aboutMe h1 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 3em;
+  text-align: center;
+}
+
+.aboutMe h1:after {
+  content: "";
+  display: block;
+  clear: both;
+  height: 3px;
+  width: 30%;
+  background: #c2000b;
+  text-align: center;
+  margin: 20px auto;
+}
+
+.aboutMe img {
+  float: left;
+  height: 300px;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  /* border-bottom-left-radius: 20%; */
+  /* border-top-right-radius: 20%; */
+  margin-right: 50px;
+}
+
+.aboutMe p {
+  line-height: 170%;
+  text-align: justify
+}
+
+.aboutBox .school {
+  text-align: center;
+  width: 100%;
+}
+
+.aboutBox .school p {
+  display: inline-block;
+  /* padding: 10px; */
+  margin: 20px auto;
+  width: 30%;
+  text-align: center;
+  font-size: 2em;
+  cursor: pointer;
+  font-family: 'Dancing Script', cursive;
+}
+
+.aboutBox .school p:hover {
+  color: #fff;
+  background-color: #c2000b;
+}
+
+/* Oferta */
