--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ nav li a:hover {
 .aboutMe img {
   float: left;
   height: 300px;
+  border: 2px solid #c2000b;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
   /* border-bottom-left-radius: 20%; */
@@ -269,9 +270,67 @@ nav li a:hover {
 }
 
 .treatment h3 span {
-  color: grey;
+  color: rgb(44, 104, 54);
   font-size: 2.2rem;
   font-weight: bold;
 }
 
 /* Aktualne promocje */
+
+.sale .promo {
+  background-image: url(https://images.unsplash.com/photo-1515377905703-c4788e51af15?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5f384fa6a6caa83e0ffdcef585e20c99&auto=format&fit=crop&w=1350&q=80);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+.promo {
+  color: #fff;
+  /* width: 100%; */
+  text-align: center;
+}
+
+.promo h3 {
+  padding: 50px 0;
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.promotions {
+  font-size: 2rem;
+}
+
+.promotion {
+  padding: 20px 0;
+  line-height: 150%;
+}
+
+.promotion h4 {
+  font-size: 3rem;
+  padding: 10px 0;
+  background-color: rgba(0, 0, 0, .5);
+  margin-bottom: 15px;
+}
+
+.promotion h4 span:nth-child(1) {
+  text-decoration: line-through;
+  /* font-size: 1rem; */
+}
+
+.promotion h4 span:nth-child(2) {
+  color: #c2000b;
+  font-size: 4rem;
+}
+
+.promotion p {
+  background-color: rgba(0, 0, 0, .7);
+}
+
+.timePromo {
+  margin-top: 30px;
+  padding: 25px 0;
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, .7);
+}
+
+/* 7. Galeria */
